--- a/src/main/java/com/mycompany/pokemonproject/NewJFrame.form
+++ b/src/main/java/com/mycompany/pokemonproject/NewJFrame.form
@@ -66,9 +66,9 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                  <Component id="healthLabel" alignment="0" min="-2" pref="16" max="-2" attributes="0"/>
+                  <Component id="healthLabel" min="-2" pref="27" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="45" max="32767" attributes="0"/>
+              <EmptySpace pref="34" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="eastButton" min="-2" max="-2" attributes="0"/>
